# ipfs-http-client

./: monorepo.code-workspace
.github/workflows/: api-interface-cd.yaml  api-interface-ci.yaml  async-ipfs-api-cd.yaml  async-ipfs-api-ci.yaml  async-uri-resolver-cd.yaml  async-uri-resolver-ci.yaml  ipfs-cat-client-cd.yaml  ipfs-cat-client-ci.yaml  ipfs-http-client-cd.yaml  ipfs-http-client-ci.yaml  sync-uri-resolver-cd.yaml  sync-uri-resolver-ci.yaml
async-uri-resolver/ipfs-http-client/: polywrap.yaml
async-uri-resolver/resolver/: polywrap.yaml
demos/common/infra/: docker-compose.yaml
demos/javascript/: README.md  package.json  polywrap.infra.yaml  polywrap.yaml  schema.graphql
demos/kotlin/: README.md  build.gradle  settings.gradle
demos/python/: main.py  pyproject.toml
demos/python/typings/polywrap_client/: client.pyi
demos/python/typings/polywrap_http_plugin/: __init__.pyi
demos/python/typings/polywrap_uri_resolvers/helpers/: __init__.pyi
demos/rust/: Cargo.toml  README.md
demos/rust/src/: main.rs
http-client/http-plugin-formdata/: package.json  schema.interface.graphql
http-client/ipfs-cat-client/: package.json  polywrap.yaml
http-client/ipfs-http-client/: deployment.json  jest.config.js  package.json  polywrap.yaml
http-plugin-timeout/: package.json
sync-uri-resolver/: Cargo.toml  package.json
uri-resolver/async-uri-resolver/: Cargo.toml  package.json  polywrap.yaml
uri-resolver/sync-uri-resolver/: buildConfig.ts  package.json  polywrap.yaml
wrappers/ipfs-http-client/: URI.txt  deployment.json  package.json  polywrap.deploy.yaml  polywrap.docs.yaml  polywrap.infra.yaml  polywrap.yaml
wraps/ipfs-http-client/: URI.txt  deployment.json  package.json  polywrap.deploy.yaml  polywrap.infra.yaml
(+48 files in other folders)
